# GroveNFC

./: .gitignore  README.md  ROADMAP.md  build_all.sh  patch_m5unit_nfc.py  platformio.ini
src/: GroveNFC.cpp  GroveNFC.h  M5Paper_Config.h  main.cpp  test_m5paper.cpp
zephyr/: CMakeLists.txt  Kconfig.app  prj.conf  west.yml
zephyr/boards/xtensa/m5stack_atoms3/: Kconfig.board  Kconfig.defconfig  m5stack_atoms3-pinctrl.dtsi  m5stack_atoms3.dts  m5stack_atoms3_defconfig
zephyr/boards/xtensa/m5stack_sticks3/: Kconfig.board  Kconfig.defconfig  board.cmake  m5stack_sticks3-pinctrl.dtsi  m5stack_sticks3.dts  m5stack_sticks3_defconfig
zephyr/drivers/grove_nfc/: CMakeLists.txt  Kconfig  grove_nfc.h  grove_nfc_drv.c
zephyr/dts/bindings/: seeed,grove-nfc.yaml
zephyr/src/: app_events.h  main.c  nfc_emulator.c  nfc_emulator.h  nfc_reader.c  nfc_reader.h  nfc_worker.c  nfc_worker.h  piano.c  piano.h  storage.c  storage.h  ui_main.c  ui_main.h
